--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,24 @@
 body {
     text-align: center;
 }
+
+ .modal {
+	background-image: url('../images/hearts.jpg');
+	background-size: cover;
+    display: none; 
+    position: center; 
+	z-index: 3;
+	padding-top: 10px; 
+    left: 0;
+    top: 0;
+    width: 100%; 
+    height: 100%;
+    overflow: auto;
+	width: 600px;
+    margin: auto;
+    width: 670px;
+    height: 300px;
+    text-align: center;	
+    font-size: 30px;
+	font-style: bold;
+}
